2008-01-19  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Update Vietnamese translation.  Thanks to Clytie
	Siddall.

2008-01-18  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Generate scripts/po-notify.

	* scripts/po-notify.in: New script to notify translators.

2008-01-18  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/05file: Only purge if CHROOT_SESSION_PURGE is
	set, as an additional extra safety measure.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* bin/schroot-mount/schroot-mount-main.cc: Ensure fstab fs_dir has
	a leading /.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.h: Add missing comma.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-setup.5.in: Document SCHROOT_SESSION_CREATE,
	SCHROOT_SESSION_CLONE, and SCHROOT_SESSION_PURGE,

	* bin/schroot/setup/00check, bin/schroot/exec/00check: Print
	SCHROOT_SESSION_CREATE, SCHROOT_SESSION_CLONE,
	SCHROOT_SESSION_PURGE, FSTAB and SBUILD values.

	* sbuild/sbuild-chroot-block-device.cc,
	sbuild-chroot-directory.cc: Use SESSION_NOFLAGS.

	* sbuild/sbuild-chroot-source.cc:
	(chroot_source::chroot_source): Explicitly initialise all member.
	(chroot_source::clone_source_setup): Set is_source when cloning a
	source chroot.
	(chroot_source::get_session_flags): Set session flags
	appropriately for source chroots, active cloned chroots and
	inactive non-cloned chroots.
	(chroot_source::get_details): Only list extra source chroot
	configuration options for non-source chroots.
	(chroot_source::get_keyfile): Only get for non-source chroots.
	(chroot_source::set_keyfile): Only set for non-source chroots.

	* sbuild/sbuild-chroot-source.h: Add is_source member.

	* sbuild/sbuild-chroot.cc
	(chroot::setup_env): Add SCHROOT_SESSION_CREATE,
	SCHROOT_SESSION_CLONE, and SCHROOT_SESSION_PURGE to the
	environment.
	(chroot::get_details): Display SCHROOT_SESSION_CREATE,
	SCHROOT_SESSION_CLONE, and SCHROOT_SESSION_PURGE.
