@@ -1,5 +1,11 @@
 2008-01-19  Roger Leigh  <rleigh@debian.org>
 
+	* bin/schroot-listmounts/schroot-listmounts-main.cc
+	(main::action_listmounts): Output mounts in reverse mount order, i.e.
+	order for unmounting.
+
+2008-01-19  Roger Leigh  <rleigh@debian.org>
+
 	* po/vi.po: Update Vietnamese translation.  Thanks to Clytie
 	Siddall.
 
